made some changes to section viewport animations

--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -120,7 +120,7 @@ $font-family-sans-serif: Avenir, Helvetica, Roboto, Arial, sans-serif;
 // $black       : #000000;
 
 // We use these as default colors throughout
-$primary-color: #00853f;
+$primary-color: #286140;
 $secondary-color: #febf4d;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
@@ -282,7 +282,7 @@ $paragraph-font-size: 1rem;
 // $anchor-text-decoration: none;
 // $anchor-text-decoration-hover: none;
 // $anchor-font-color: $primary-color;
-$anchor-font-color-hover: #00642f;
+$anchor-font-color-hover: #1e4930;
 
 // We use these to style the <hr> element
 // $hr-border-width: 1px;
