--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -207,7 +207,7 @@ svg {
 
 			.is-active,
 			&:hover {
-				color: #80c29f;
+				color: #94b0a0;
 			}
 
 		}
@@ -317,32 +317,27 @@ svg {
 
 }
 
-.full-link {
+// .full-link {
 
-	&:hover {
+// 	&:hover {
 		
-		.overlay {
-			opacity: 1;
-		}
+// 		.overlay {
+// 			opacity: 1;
+// 		}
 
-	}
+// 	}
 
-}
+// }
 
 .overlay {
 	@extend .centre-align;
 	position: absolute;
 	width: 100%;
-	background: rgba($white, 0.8);
-	box-shadow:
-		inset 0 0 0 110px rgba($secondary-color, 0.4),
-		inset 0 0 0 16px rgba(255, 255, 255, 0.8),
-		0 1px 2px rgba(0, 0, 0, 0.1);
 	left: 0;
 	top: 0;
 	z-index: -1;
+	background: rgba($white, 0.8);
 	opacity: 0;
-	transition: ($transition-time / 2);
 
 	h2 {
 		font-size: 3.815rem;
