fixed links in 'personal' section

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5094,16 +5094,16 @@ svg {
   background-image: url("../../uploads/families/11/IMG_4620(pp_w858_h573).jpg"); }
 
 #personal .first-image {
-  background-image: url("../../uploads/_MG_2396.jpg"); }
+  background-image: url("../../uploads/personal/_MG_2396.jpg"); }
 
 #personal .second-image {
-  background-image: url("../../uploads/pexels-photo-1.jpg"); }
+  background-image: url("../../uploads/personal/pexels-photo-1.jpg"); }
 
 #personal .third-image {
-  background-image: url("../../uploads/pexels-photo.jpg"); }
+  background-image: url("../../uploads/personal/pexels-photo.jpg"); }
 
 #personal .fourth-image {
-  background-image: url("../../uploads/pexels-photo2.jpg"); }
+  background-image: url("../../uploads/personal/pexels-photo2.jpg"); }
 
 .gallery-page .grid-overlay h3 {
   bottom: 50%;
