--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -828,19 +828,19 @@ svg {
 #personal {
 	
 	.first-image {
-		background-image: url('../../uploads/_MG_2396.jpg');
+		background-image: url('../../uploads/personal/_MG_2396.jpg');
 	}
 
 	.second-image {
-		background-image: url('../../uploads/pexels-photo-1.jpg');
+		background-image: url('../../uploads/personal/pexels-photo-1.jpg');
 	}
 
 	.third-image {
-		background-image: url('../../uploads/pexels-photo.jpg');
+		background-image: url('../../uploads/personal/pexels-photo.jpg');
 	}
 
 	.fourth-image {
-		background-image: url('../../uploads/pexels-photo2.jpg');
+		background-image: url('../../uploads/personal/pexels-photo2.jpg');
 	}
 
 }
