--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5155,7 +5155,11 @@ svg {
 
 .page-title {
   text-align: center;
-  margin-bottom: 1.875rem; }
+  margin-bottom: 1.875rem;
+  -webkit-hyphens: auto;
+     -moz-hyphens: auto;
+      -ms-hyphens: auto;
+          hyphens: auto; }
 
 .title-flourish {
   width: 6.25rem;
