--- a/assets/scss/_slick.scss
+++ b/assets/scss/_slick.scss
@@ -3,18 +3,18 @@
 .slick-slider {
     position: relative;
     display: block;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
-    -ms-touch-action: pan-y;
     touch-action: pan-y;
     -webkit-tap-highlight-color: transparent;
+
+    .slick-track,
+    .slick-list {
+        transform: translate3d(0, 0, 0);
+    }
+
 }
+
 .slick-list {
     position: relative;
     overflow: hidden;
@@ -30,14 +30,7 @@
         cursor: pointer;
         cursor: hand;
     }
-}
-.slick-slider .slick-track,
-.slick-slider .slick-list {
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
-    -ms-transform: translate3d(0, 0, 0);
-    -o-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
+
 }
 
 .slick-track {
@@ -60,6 +53,7 @@
         visibility: hidden;
     }
 }
+
 .slick-slide {
     float: left;
     height: 100%;
@@ -67,9 +61,11 @@
     [dir="rtl"] & {
         float: right;
     }
+
     img {
         display: block;
     }
+
     &.slick-loading img {
         display: none;
     }
@@ -93,7 +89,9 @@
         height: auto;
         border: 1px solid transparent;
     }
+
 }
+
 .slick-arrow.slick-hidden {
     display: none;
 }
