--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -74,6 +74,9 @@ $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
+
+$arrow-colour: rgba($white, 0.99);
+
 $body-background: $white;
 $body-font-color: $primary-color;
 $body-font-family: Titillium, Helvetica, Roboto, Arial, sans-serif;
