--- a/assets/scss/_animsition.scss
+++ b/assets/scss/_animsition.scss
@@ -39,10 +39,10 @@
 
 .animsition-loading {
   background-color: transparent;
-  border-top: 5px solid rgba(0, 0, 0, 0.2);
-  border-right: 5px solid rgba(0, 0, 0, 0.2);
-  border-bottom: 5px solid rgba(0, 0, 0, 0.2);
-  border-left: 5px solid #eee;
+  border-top: 5px solid rgba($secondary-color, 0.2);
+  border-right: 5px solid rgba($secondary-color, 0.2);
+  border-bottom: 5px solid rgba($secondary-color, 0.2);
+  border-left: 5px solid $secondary-color;
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
   -webkit-animation-iteration-count:infinite;
