changed how some of the gallery looks on mobile

--- a/assets/scss/_gallery-styles.scss
+++ b/assets/scss/_gallery-styles.scss
@@ -52,27 +52,27 @@
 		text-align: center;
 	}
 	
-	.grid-overlay {
+	// .grid-overlay {
 
-		h3 {
-			bottom: 50%;
-			transform: translateX(-50%) translateY(50%);
+	// 	h3 {
+	// 		bottom: 50%;
+	// 		transform: translateX(-50%) translateY(50%);
 
-			@include breakpoint(medium only) {
-				bottom: 50%;
-			}
+	// 		@include breakpoint(medium only) {
+	// 			bottom: 50%;
+	// 		}
 
-			@include breakpoint(small only) {
-				bottom: 50%;
-			}
+	// 		@include breakpoint(small only) {
+	// 			bottom: 50%;
+	// 		}
 
-			@include medium-landscape {
-				font-size: header-size(medium, h4);
-			}
+	// 		@include medium-landscape {
+	// 			font-size: header-size(medium, h4);
+	// 		}
 
-		}
+	// 	}
 
-	}
+	// }
 
 }
 
