--- a/assets/scss/_main-styles.scss
+++ b/assets/scss/_main-styles.scss
@@ -70,9 +70,10 @@ svg {
 }
 
 .disappear {
-	display: none;
+	opacity: 0;
+	transition: opacity $transition-time;
 }
 
 .show {
-	display: block;
+	opacity: 1;
 }
