--- a/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
@@ -197,11 +197,13 @@
 .login {
 	overflow-x: hidden;
 	height: auto;
+	background: url(../images/login-page.jpg) center no-repeat;
+	background-size: cover;
 }
 
 .login-form {
 	margin-top: rem-calc(60);
-	background-color: $primary-color-90-lighter;
+	background-color: rgba($white, 0.8);
 	padding: rem-calc($grid-column-gutter / 2);
 	text-align: center;
 	position: relative;
@@ -211,4 +213,14 @@
 		padding: 0;
 	}
 
+}
+
+.bg-overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	background: rgba($primary-color, 0.8);
+	z-index: -999;
 }
