adding more schema markup

--- a/storage/themes/riddelphotographers/partials/main-header.html
+++ b/storage/themes/riddelphotographers/partials/main-header.html
@@ -24,7 +24,7 @@
     <div id="top" class="off-canvas-wrapper animsition">
       <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
         <koken:include file="partials/side-navigation.html" />
-        <div class="off-canvas-content" data-off-canvas-content>
+        <div class="off-canvas-content" data-off-canvas-content itemscope itemprop="mainContentOfPage" itemtype="http://schema.org/WebPageElement">
           <header class="main-header vh_height100" itemscope itemtype="http://schema.org/WPHeader">
             <div class="main-elements">
               <koken:link to="front" title="{{ labels.home.singular }}" class="">
