added spinner svg for lazy loading

--- a/storage/themes/riddelphotographers/assets/scss/_settings.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_settings.scss
@@ -65,6 +65,8 @@ $secondary-color: #febf4d;
 $secondary-color-25-darker: #be8f3a;
 $secondary-color-50-darker: #7f5f26;
 
+$secondary-color-rgb: rgba($secondary-color, 0.99);
+
 
 $success-color: #3adb76;
 $warning-color: #ffae00;
