--- a/storage/themes/riddelphotographers/assets/scss/_slick-theme.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_slick-theme.scss
@@ -37,9 +37,11 @@ $slick-opacity-not-active: 0.25 !default;
 /* Slider */
 
 .slick-list {
+
     .slick-loading & {
-        background: $white url("../images/ajax-loader.gif") center center no-repeat;
+        @include spinner;
     }
+    
 }
 
 /* Icons */
