--- a/storage/themes/riddelphotographers/assets/scss/_off-canvas-menu.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_off-canvas-menu.scss
@@ -92,7 +92,7 @@
 			font-size: header-size(medium, h3);
 		}
 
-		.active,
+		&.k-nav-current,
 		&:hover {
 			color: $primary-color-50-lighter;
 		}
