--- a/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
@@ -14,6 +14,68 @@
 .content {
 	padding-top: rem-calc(48);
 	padding-bottom: rem-calc(48);
+
+	p {
+		@include moveInUp;
+
+		&:nth-child(2) {
+			animation-delay: 0.25s;
+		}
+
+		&:nth-child(3) {
+			animation-delay: 0.375s;
+		}
+
+		&:nth-child(4) {
+			animation-delay: 0.5s;
+		}
+
+		&:nth-child(5) {
+			animation-delay: 0.625s;
+		}
+
+		&:nth-child(6) {
+			animation-delay: 0.75s;
+		}
+
+		&:nth-child(7) {
+			animation-delay: 0.875s;
+		}
+
+		&:nth-child(8) {
+			animation-delay: 1s;
+		}
+
+		&:nth-child(9) {
+			animation-delay: 1.125s;
+		}
+
+		&:nth-child(10) {
+			animation-delay: 1.25s;
+		}
+
+		&:nth-child(11) {
+			animation-delay: 1.375s;
+		}
+
+		&:nth-child(12) {
+			animation-delay: 1.5s;
+		}
+
+		&:nth-child(13) {
+			animation-delay: 1.625s;
+		}
+
+		&:nth-child(14) {
+			animation-delay: 1.725s;
+		}
+
+		&:nth-child(15) {
+			animation-delay: 1.875s;
+		}
+
+	}
+
 }
 
 .regular-page,
