--- a/storage/themes/riddelphotographers/assets/scss/_animations.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_animations.scss
@@ -5,8 +5,16 @@
 }
 
 @keyframes flash {
-	0%, 50%, 100% {opacity: 1;}
-	25%, 75% {opacity: 0;}
+	0%,
+	50%,
+	100% {
+		opacity: 1;
+	}
+
+	25%,75% {
+		opacity: 0;
+	}
+
 }
 
 @mixin flash {
@@ -16,4 +24,82 @@
 	animation-timing-function: ease;
 	animation-fill-mode: both;
 	backface-visibility: hidden;
+}
+
+@keyframes fadeInUp {
+
+	from {
+		opacity: 0;
+		transform: translate3d(0, 100%, 0);
+	}
+
+	to {
+		opacity: 1;
+		transform: none;
+	}
+
+}
+
+@mixin fadeInUp {
+	animation-name: fadeInUp;
+	animation-duration: 1s;
+	animation-fill-mode: both;
+}
+
+@keyframes fadeInDown {
+
+	from {
+		opacity: 0;
+		transform: translate3d(0, -100%, 0);
+	}
+
+	to {
+		opacity: 1;
+		transform: none;
+	}
+
+}
+
+@mixin fadeInDown {
+	animation-name: fadeInDown;
+	animation-duration: 1s;
+	animation-fill-mode: both;
+}
+
+@keyframes moveInUp {
+
+	from {
+		transform: translate3d(0, 30px, 0);
+	}
+
+	to {
+		transform: none;
+	}
+
+}
+
+@mixin moveInUp {
+	animation-name: moveInUp;
+	animation-duration: 1s;
+	animation-fill-mode: both;
+}
+
+@keyframes pointer {
+
+	0%,
+	100% {
+		transform: translate3d(-10%, 0, 0) rotate(-90deg);
+		visibility: visible;
+	}
+
+	50% {
+		transform: translate3d(0, 0, 0) rotate(-90deg);
+	}
+
+}
+
+@mixin pointer {
+ 	animation-name: pointer;
+	animation-duration: 2s;
+	animation-fill-mode: both;
 }
