--- a/storage/themes/riddelphotographers/assets/scss/_settings.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_settings.scss
@@ -120,6 +120,10 @@ $breakpoint-classes: (small medium large);
 $grid-row-width: $global-width;
 $grid-column-count: 12;
 $grid-column-gutter: 30px;
+$grid-column-responsive-gutter: (
+  small: 20px,
+  medium: $grid-column-gutter,
+);
 $grid-column-align-edge: true;
 $block-grid-max: 8;
 
@@ -231,6 +235,7 @@ $accordion-content-padding: 1rem;
 // -----------------
 
 $accordionmenu-arrows: true;
+$accordionmenu-arrow-color: $primary-color;
 
 // 9. Badge
 // --------
@@ -309,6 +314,7 @@ $closebutton-color-hover: $black;
 
 $drilldown-transition: transform 0.15s linear;
 $drilldown-arrows: true;
+$drilldown-arrow-color: $primary-color;
 $drilldown-background: $white;
 
 // 16. Dropdown
@@ -316,7 +322,7 @@ $drilldown-background: $white;
 
 $dropdown-padding: 1rem;
 $dropdown-border: 1px solid $medium-gray;
-$dropdown-font-size: 16rem;
+$dropdown-font-size: 1rem;
 $dropdown-width: 300px;
 $dropdown-radius: $global-radius;
 $dropdown-sizes: (
@@ -329,6 +335,7 @@ $dropdown-sizes: (
 // -----------------
 
 $dropdownmenu-arrows: true;
+$dropdownmenu-arrow-color: $anchor-color;
 $dropdownmenu-min-width: 200px;
 $dropdownmenu-background: $white;
 $dropdownmenu-border: 1px solid $medium-gray;
@@ -336,7 +343,6 @@ $dropdownmenu-border: 1px solid $medium-gray;
 // 18. Flex Video
 // --------------
 
-$flexvideo-padding-top: rem-calc(25);
 $flexvideo-margin-bottom: rem-calc(16);
 $flexvideo-ratio: 4 by 3;
 $flexvideo-ratio-widescreen: 16 by 9;
@@ -360,7 +366,7 @@ $form-label-color: $primary-color-25-darker;
 $form-label-font-size: rem-calc(14);
 $form-label-font-weight: $global-weight-normal;
 $form-label-line-height: 1.8;
-$select-background: #fafafa;
+$select-background: $white;
 $select-triangle-color: $primary-color-25-lighter;
 $select-radius: $global-radius;
 $input-color: inherit;
@@ -557,6 +563,8 @@ $titlebar-icon-spacing: 0.25rem;
 // 34. Tooltip
 // -----------
 
+$has-tip-font-weight: $global-weight-bold;
+$has-tip-border-bottom: dotted 1px $dark-gray;
 $tooltip-background-color: $black;
 $tooltip-color: $white;
 $tooltip-padding: 0.75rem;
@@ -570,7 +578,7 @@ $tooltip-radius: $global-radius;
 // -----------
 
 $topbar-padding: 0.5rem;
-$topbar-background: #eee;
-$topbar-link-color: #fff;
+$topbar-background: $light-gray;
+$topbar-title-spacing: 1rem;
 $topbar-input-width: 200px;
 
