--- a/storage/themes/riddelphotographers/assets/scss/app.scss
+++ b/storage/themes/riddelphotographers/assets/scss/app.scss
@@ -6,7 +6,7 @@
 
 @import 'settings';
 @import 'foundation';
-@import 'motion-ui';
+// @import 'motion-ui';
 
 @include foundation-global-styles;
 @include foundation-grid;
@@ -46,12 +46,12 @@
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
 
+@import 'animations';
 @import 'slick';
 @import 'slick-theme';
 @import 'animsition';
 @import 'main-styles';
 @import 'forms';
-@import 'animations';
 @import 'off-canvas-menu';
 @import 'header';
 @import 'home-page';
