--- a/storage/themes/riddelphotographers/assets/scss/_header.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_header.scss
@@ -59,46 +59,50 @@
 
 .main-header .menu {
 
-	> li {
+	&.active {
 
-		&:nth-child(1) {
-			animation-delay: 1s;
-		}
+		> li {
 
-		&:nth-child(2) {
-			animation-delay: 1.25s;
-		}
+			&:nth-child(1) {
+				animation-delay: 1s;
+			}
 
-		&:nth-child(3) {
-			animation-delay: 1.5s;
-		}
+			&:nth-child(2) {
+				animation-delay: 1.25s;
+			}
 
-		&:nth-child(4) {
-			animation-delay: 1.75s;
-		}
+			&:nth-child(3) {
+				animation-delay: 1.5s;
+			}
 
-		&:nth-child(5) {
-			animation-delay: 2s;
-		}
+			&:nth-child(4) {
+				animation-delay: 1.75s;
+			}
 
-		&:nth-child(6) {
-			animation-delay: 2.25s;
-		}
+			&:nth-child(5) {
+				animation-delay: 2s;
+			}
 
-		&:nth-child(7) {
-			animation-delay: 2.5s;
-		}
+			&:nth-child(6) {
+				animation-delay: 2.25s;
+			}
 
-		&:nth-child(8) {
-			animation-delay: 2.75s;
-		}
+			&:nth-child(7) {
+				animation-delay: 2.5s;
+			}
 
-		&:nth-child(9) {
-			animation-delay: 3s;
-		}
+			&:nth-child(8) {
+				animation-delay: 2.75s;
+			}
 
-		&:nth-child(10) {
-			animation-delay: 3.25s;
+			&:nth-child(9) {
+				animation-delay: 3s;
+			}
+
+			&:nth-child(10) {
+				animation-delay: 3.25s;
+			}
+
 		}
 
 	}
